--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aniso8601==9.0.1
 bcrypt==3.1.7
 cffi==1.14.6
 click==7.1.2
+Faker==9.3.1
 Flask==1.1.2
 Flask-Cors==3.0.10
 Flask-Migrate==2.7.0
@@ -23,6 +24,7 @@ python-editor==1.0.4
 pytz==2021.1
 six==1.16.0
 SQLAlchemy==1.4.3
+text-unidecode==1.3
 typing-extensions==3.7.4.3
 Werkzeug==1.0.1
 zipp==3.4.1
