--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.5.8
 aniso8601==9.0.1
 bcrypt==3.1.7
+boto3==1.18.59
+botocore==1.21.59
 cffi==1.14.6
 click==7.1.2
 Faker==9.3.1
@@ -13,6 +15,7 @@ greenlet==1.0.0
 importlib-metadata==3.7.3
 itsdangerous==1.1.0
 Jinja2==2.11.3
+jmespath==0.10.0
 Mako==1.1.4
 MarkupSafe==1.1.1
 psycopg2-binary==2.8.6
@@ -22,9 +25,11 @@ python-dateutil==2.8.1
 python-dotenv==0.19.0
 python-editor==1.0.4
 pytz==2021.1
+s3transfer==0.5.0
 six==1.16.0
 SQLAlchemy==1.4.3
 text-unidecode==1.3
 typing-extensions==3.7.4.3
+urllib3==1.26.7
 Werkzeug==1.0.1
 zipp==3.4.1
