--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-browser-geolocation": "^1.8.0",
     "vue-router": "^3.5.2",
+    "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
