--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-Migrate==2.7.0
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.5.1
 greenlet==1.0.0
+gunicorn==20.1.0
 importlib-metadata==3.7.3
 itsdangerous==1.1.0
 Jinja2==2.11.3
